kubernetes/deployment-v1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spring-boot-web
    version: v1
  name: spring-boot-web-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-web
  template:
    metadata:
      labels:
        app: spring-boot-web
        version: v1
    spec:
      containers:
      - image: keitamochizuki/spring-boot-web
        name: spring-boot-web
