kubernetes/service-v1.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-boot-web
    version: v1
  name: spring-boot-web-v1
spec:
  selector:
    version: v1
  ports:
  - protocol: TCP
    name: http
    port: 8080
    targetPort: 8080
