kubernetes/service-v2.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-boot-web
    version: v2
  name: spring-boot-web-v2
spec:
  selector:
    version: v2
  ports:
  - protocol: TCP
    name: http
    port: 8080
    targetPort: 8080
