kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-boot-web
  name: spring-boot-web
spec:
  selector:
    app: spring-boot-web
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
